--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -206,7 +206,8 @@
   }
 }
 @media (max-width: 1240px) {
-  .tabbtn {
+  .tabbtn,
+  .tabbtn_hover {
     padding: 23px;
   }
   .drop_down {
@@ -220,7 +221,7 @@
   }
 }
 @media (max-width: 1024px) {
-  .tabbtn {
+  .tabbtn.tabbtn_hover {
     padding: 18px;
   }
   :root {
@@ -230,7 +231,6 @@
 @media (max-width: 991px) {
   .nav_bar {
     position: fixed;
-    z-index: 4 !important;
     background: #f8dbeb;
     min-height: 100vh;
     top: 0 !important;
@@ -252,9 +252,9 @@
     transform: rotate(-50deg) translateY(-97%);
   }
   .navline span {
-    width: 40px;
+    width: 35px;
     height: 4px;
-    border-radius: 10px;
+    border-radius: 50px;
   }
   .email_btn {
     max-width: 100%;
@@ -284,8 +284,10 @@
 }
 @media (max-width: 576px) {
   :root {
-    --font-lg: 30px;
-    --font-xl: 32px;
+    --font-md: 20px;
+    --font-xlg: 24px;
+    --font-lg: 26px;
+    --font-xl: 28px;
     --font-xxl: 34px;
   }
   .max_w_80 {
