--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   list-style-type: none !important;
   font-family: "Poppins", sans-serif !important;
+  scroll-behavior: smooth !important;
 }
 ::-webkit-scrollbar {
   display: none;
@@ -102,19 +103,24 @@
   color: #58595b;
 }
 /* ==========================================header-section============================================ */
-
 .drop_down {
+  content-visibility: hidden;
   opacity: 0;
   transform: translate(-20%, 2px);
   gap: 2px;
   width: 220px;
-  padding: 24px 0 45px;
-  border: 1.5px solid #d0006f;
+  height: 0;
+  padding: 0;
+  border: 1.5px solid transparent;
   border-radius: 4px;
-  box-shadow: 0px 15px 30px 0px #0000001a;
 }
 .nav_link:hover .drop_down {
+  content-visibility: visible;
+  border: 1.5px solid #d0006f;
+  box-shadow: 0px 15px 30px 0px #0000001a;
+  padding: 24px 0 45px;
   opacity: 1;
+  height: auto;
 }
 .nav_link:hover .icon_rotate {
   transform: rotate(180deg);
@@ -156,8 +162,15 @@
   border-radius: 50px;
   background: linear-gradient(97.1deg, #d0006f 4.95%, #0055b2 94.87%);
 }
+.contact_btn:focus,
 .contact_btn:hover {
-  box-shadow: 2px 5px 8px #d0006f;
+  animation: pulse 1s;
+  box-shadow: 0 0 0 0.7em transparent;
+}
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 #9c5cec;
+  }
 }
 /* ======================================footer-section=========================================== */
 .footer_link::after {
@@ -199,6 +212,62 @@
   width: 41px;
   border-radius: 50%;
   border: 0.1px solid #bfbec5;
+}
+/* ====================================================backtotop================================== */
+.backtotop {
+  background: linear-gradient(97.1deg, #d0006f 4.95%, #0055b2 94.87%);
+  width: 40px;
+  height: 40px;
+  border: 2px solid white;
+  border-radius: 50%;
+  box-shadow: 0px 5px 10px 0px #a05aeb;
+  right: 1%;
+  bottom: 1%;
+}
+.updown_animation {
+  animation: mover 1s infinite alternate;
+}
+@keyframes mover {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-7px);
+  }
+}
+/* ===================================================preloader================================== */
+.back span {
+  font-size: var(--font-xl);
+  background: linear-gradient(97.1deg, #d0006f 4.95%, #0055b2 94.87%);
+  display: table-cell;
+  animation: jumb 2s infinite;
+}
+@keyframes jumb {
+  0%,
+  100% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-30px);
+  }
+}
+.back span:nth-child(1) {
+  animation-delay: 0s;
+}
+.back span:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.back span:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.back span:nth-child(4) {
+  animation-delay: 0.3s;
+}
+.back span:nth-child(5) {
+  animation-delay: 0.4s;
+}
+.back span:nth-child(6) {
+  animation-delay: 0.5s;
 }
 @media (min-width: 1440px) {
   .custom_container {
@@ -255,9 +324,6 @@
     width: 35px;
     height: 4px;
     border-radius: 50px;
-  }
-  .email_btn {
-    max-width: 100%;
   }
   .drop_down {
     opacity: 0 !important;
