--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -137,18 +137,20 @@
 .tabbtn {
   background: transparent;
   border-radius: 8px;
-  padding: 25px 38px 25px 38px;
   border: none;
-  max-width: 422px;
-  border-left: 8px solid transparent;
+  max-width: 430px;
+}
+.tabbtn > svg {
+  opacity: 0;
+}
+.tabbtn_hover > svg {
+  opacity: 1;
 }
 .tabbtn_hover {
   border-radius: 8px;
-  padding: 25px 38px 25px 38px;
   border: none;
-  max-width: 422px;
+  max-width: 430px;
   background: #f8dbeb;
-  border-left: 8px solid #d0006f;
 }
 .max_w_430 {
   max-width: 430px;
@@ -275,10 +277,6 @@
   }
 }
 @media (max-width: 1240px) {
-  .tabbtn,
-  .tabbtn_hover {
-    padding: 23px;
-  }
   .drop_down {
     gap: 0px;
     width: 160px;
@@ -290,10 +288,8 @@
   }
 }
 @media (max-width: 1024px) {
-  .tabbtn.tabbtn_hover {
-    padding: 18px;
-  }
   :root {
+    --font-md: 22px;
     --font-xxl: 44px;
   }
 }
@@ -331,21 +327,23 @@
   .nav_link .icon_rotate {
     display: none;
   }
+  .email_btn{
+    max-width: 100%;
+  }
+  .tabbtn_hover > svg,
+  .tabbtn > svg {
+    height: 60px !important;
+  }
 }
 @media (max-width: 820px) {
   :root {
     --font-xs: 12px;
     --font-s: 14px;
     --font-sm: 16px;
-    --font-md: 22px;
     --font-xlg: 28px;
     --font-lg: 32px;
     --font-xl: 36px;
     --font-xxl: 40px;
-  }
-  .tabbtn,
-  .tabbtn_hover {
-    padding: 14px;
   }
 }
 @media (max-width: 576px) {
